# AutoMovieGeneration

./: .gitignore  README.md  config.json  idea2script_pipeline_test.py  image_generator_test.py  main.py  novel2movie_pipeline_test.py  pyproject.toml  script2video_pipeline_test.py
agents/: __init__.py  best_image_selector.py  character_extractor.py  character_image_generator.py  elements.py  event_extractor.py  frame_candidate_images_generator.py  frame_image_generator.py  global_information_planner.py  image_consistency_checker.py  image_generator.py  reference_image_selector.py  rewriter.py  scene_extractor.py  script_enhancer.py  script_planner.py  storyboard_generator.py  video_generation_pipeline.py  video_generator.py
agents/elements/: __init__.py  character.py  event.py  scene.py  shot.py  temp.py
agents/novel2script/: character_aggregator_scene_level.py  character_merger.py  event_extractor.py  novel2script_pipeline.py  novel_compressor.py  scene_extractor.py
agents/tools/: gemini_image.py  gpt4o_image.py  jimeng_video.py  kling_video.py  silicon_rerank.py  veo_video.py
agents/utils/: image.py  video.py
components/: character.py  event.py  key_item.py  scene.py  shot.py
configs/: idea2script.yaml  idea2video.yaml  novel2movie.yaml  script2video.yaml
example_inputs/: 流浪地球.txt  百团大战.txt
pipelines/: base.py  idea2script_pipeline.py  novel2movie_pipeline.py  script2video_pipeline.py
test/: idea2video_pipeline_test.py  image_generator_test.py  novel2movie_pipeline_test.py  script2video_pipeline_test.py  video_generator_test.py
utils/: image.py
(+85 files in other folders)
